--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -22,9 +22,9 @@ functions:
     handler: index.checkIPAddress
   manageCars:
     handler: index.manageCars
-    # events:
-    #   - schedule: cron(0 12 * * ? *) # 저녁 9시
-    #   - schedule: cron(0 21 * * ? *) # 아침 6시
+    events:
+      - schedule: cron(0 13 * * ? *) # 저녁 10시
+      - schedule: cron(0 22 * * ? *) # 아침 7시
 
 plugins:
   - serverless-plugin-typescript
