--- a/bcar-upload-cars/package.json
+++ b/bcar-upload-cars/package.json
@@ -17,10 +17,12 @@
     "@aws-sdk/client-batch": "^3.196.0",
     "@aws-sdk/client-dynamodb": "^3.196.0",
     "@aws-sdk/client-sns": "^3.196.0",
+    "cheerio": "^1.0.0-rc.12",
     "googleapis": "^110.0.0",
     "puppeteer": "^19.4.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/puppeteer": "^5.4.7"
   }
 }
