[feature] Add sentry

--- a/bcar-upload-cars/package.json
+++ b/bcar-upload-cars/package.json
@@ -5,10 +5,10 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "docker compose exec crawler node /app/dist/src/index.js",
-    "start:local": "set -a && source env/.env && source env/aws.env && set +a && node dist/src/index.js",
+    "start:local": "set -a && source env/.env && set +a && node dist/src/index.js",
     "build": "tsc && docker compose build",
     "container": "docker compose up -d",
-    "deploy:job:definition": "set -a && source env/.env && source env/aws.env && set +a && node dist/src/aws/JobDefinitionDeployer.js"
+    "deploy:job:definition": "set -a && source env/.env && set +a && node dist/src/aws/JobDefinitionDeployer.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,8 @@
     "@aws-sdk/client-batch": "^3.196.0",
     "@aws-sdk/client-dynamodb": "^3.196.0",
     "@aws-sdk/client-sns": "^3.196.0",
+    "@sentry/node": "^7.34.0",
+    "@sentry/tracing": "^7.34.0",
     "cheerio": "^1.0.0-rc.12",
     "googleapis": "^110.0.0",
     "puppeteer": "^19.4.1"
