--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "target": "es2021",
     "typeRoots": ["@types", "node_modules/@types"]
   },
-  "exclude": ["node_modules", "dist/**/*"]
+  "exclude": ["node_modules", "dist/**/*", "serverless"]
 }
