--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -20,11 +20,11 @@ provider:
 functions:
   collectDrafts:
     handler: index.collectDrafts
-    # events:
-    #   - schedule: cron(0 21 * * ? *) # 아침 6시
-    #   - schedule: cron(0 3 * * ? *)  # 정오 12시
-    #   - schedule: cron(0 7 * * ? *)  # 오후 4시
-    #   - schedule: cron(0 12 * * ? *) # 저녁 9시
+    events:
+      - schedule: cron(0 21 * * ? *) # 아침 6시
+      - schedule: cron(0 3 * * ? *)  # 정오 12시
+      - schedule: cron(0 7 * * ? *)  # 오후 4시
+      - schedule: cron(0 12 * * ? *) # 저녁 9시
   manageCars:
     handler: index.manageCars
 
