--- a/.github/workflows/local-push.yaml
+++ b/.github/workflows/local-push.yaml
@@ -1,5 +1,5 @@
-name: Local
-run-name: 'Local 🚀'
+name: Local Push
+run-name: 'Local Push 🚀'
 on:
   push:
     branches-ignore:
@@ -26,6 +26,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          mask-password: 'true'
 
       - name: Build and push
         uses: docker/build-push-action@v4
