--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -28,6 +28,8 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          mask-password: 'true'
 
       - name: Build and push
         uses: docker/build-push-action@v4
