--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -2,8 +2,8 @@ name: Main
 run-name: 'Main 🚀'
 on:
   push:
-    branches:
-      - 'main'
+    # branches:
+    #   - 'main'
 
 jobs:
   Serverless-Deploy:
