[fix] Resume workflow file

--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -1,9 +1,9 @@
-name: Main
-run-name: 'Main 🚀'
+name: Main Push
+run-name: 'Main Push 🚀'
 on:
   push:
-    # branches:
-    #   - 'main'
+    branches:
+      - 'main'
 
 jobs:
   Serverless-Deploy:
