--- a/.github/workflows/main-push.yaml
+++ b/.github/workflows/main-push.yaml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - 'src/**'
+      - 'Dockerfile'
+      - '.dockerignore'
+      - '**.json'
 
 jobs:
   Build-Image:
